--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,12 @@
 
         </activity>
 
+        <activity
+            android:name=".view.animations.AnimationActivity"
+            android:exported="true">
+
+        </activity>
+
     </application>
 
 </manifest>
