lesson6: add Recycler view with notes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
             android:name=".view.recycler.RecyclerActivity"
             android:exported="false" />
         <activity
+            android:name=".view.recycler.RecyclerActivityNotes"
+            android:exported="false" />
+
+        <activity
+
             android:name=".view.MainActivity"
             android:exported="true">
             <intent-filter>
