lesson7: start/ Add fonts

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,4 +36,8 @@
             android:exported="true"></activity>
     </application>
 
+    <meta-data
+        android:name="preloaded_fonts"
+        android:resource="@array/preloaded_fonts" />
+
 </manifest>
