--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/MyThemeEarth">
+        android:theme="@style/MyThemeSplash">
         <activity
             android:name=".view.recycler.RecyclerActivity"
             android:exported="false" />
@@ -19,8 +19,20 @@
             android:exported="false" />
 
         <activity
-
             android:name=".view.MainActivity"
+            android:exported="true">
+
+        </activity>
+
+        <activity
+            android:name=".view.bottomnavigation.ApiBottomActivity"
+            android:exported="true"/>
+        <activity
+            android:name=".view.animations.AnimationActivity"
+            android:exported="true"/>
+
+        <activity
+            android:name=".view.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,12 +40,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".view.bottomnavigation.ApiBottomActivity"
-            android:exported="true"></activity>
-        <activity
-            android:name=".view.animations.AnimationActivity"
-            android:exported="true"></activity>
+
     </application>
 
     <meta-data
